Bug 483108 - No visual feedback while installing an addon via a "Get new..." window
Summary: No visual feedback while installing an addon via a "Get new..." window
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2024-03-10 12:45 UTC by Patrick Silva
Modified: 2024-03-14 16:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
"Working..." visual feedback on Plasma 5 (140.28 KB, image/png)
2024-03-10 12:45 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-03-10 12:45:49 UTC
Created attachment 166868 [details]
"Working..." visual feedback on Plasma 5

SUMMARY
On Plasma 5, there was a "Working..." feedback (seen in the attached screenshot) while installing an addon via "Get new...' window.
However, there is no feedback on Plasma 6.

STEPS TO REPRODUCE
1. install an addon via a "Get new..." window
2. 
3. 

OBSERVED RESULT
no visual feedback

EXPECTED RESULT
there is a visual feedback

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-03-11 21:38:34 UTC
Can confirm. There was feedback in KF5; looks like it got lost somehow.
Comment 2 Bug Janitor Service 2024-03-14 08:58:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/303
Comment 3 Akseli Lahtinen 2024-03-14 16:38:26 UTC
Git commit 0f77a2310bb7bc891695abb5258c53f5584b7981 by Akseli Lahtinen.
Committed on 14/03/2024 at 16:38.
Pushed by akselmo into branch 'master'.

Fix the "working..." overlay for item installation

The bug [431568](https://bugs.kde.org/show_bug.cgi?id=431568) this fixes does not happen anymore. 
Instead it breaks the working overlay.

M  +0    -10   src/qtquick/quickengine.cpp

https://invent.kde.org/frameworks/knewstuff/-/commit/0f77a2310bb7bc891695abb5258c53f5584b7981