Fix the "working..." overlay for item installation

The bug [431568](https://bugs.kde.org/show_bug.cgi?id=431568) this fixes does not happen anymore. 
Instead it breaks the working overlay.

BUG:483108